--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,729 +1,18 @@
-/*Font-size*/
-body p {
-  font-size: 1rem;
-  font-family: "Roboto";
-  font-weight: 300;
-}
+/* Error: expected "}".
+ *     ,
+ * 178 | }
+ *     |  ^
+ *     '
+ *   scss\pages\restaurant.scss 178:2  @import
+ *   scss\styles.scss 8:9              root stylesheet */
 
-.fonctionnement,
-.restaurants h2 {
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-h1 {
-  font-family: "Shrikhand";
-  font-size: 1.75rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-h2 {
-  font-size: 1.5rem;
-  font-family: "Roboto";
-  font-weight: 700;
-}
-
-h3 {
-  font-family: "Roboto";
-  font-size: 18px;
-  font-weight: 700;
-}
-
-p {
-  font-family: "Roboto";
-  font-size: 17px;
-  font-weight: 300;
-}
-
-.presentation h1 {
-  font-family: "Roboto";
-  font-size: 24px;
-  font-weight: 700;
-}
-
-.presentation p {
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 18px;
-}
-
-.presentation a {
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.restaurants h2 {
-  padding-left: 1px;
-}
-
-.intitule_plat p {
-  font-size: 0.94rem;
-}
-
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-
-ul {
-  list-style: none;
-}
-
-button, input, select {
-  margin: 0;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-img, video {
-  height: auto;
-  max-width: 100%;
-}
-
-iframe {
-  border: 0;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-td, th {
-  padding: 0;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-/*Bouton Homepage*/
-.presentation button {
-  border-radius: 25px;
-  border: 0px solid;
-  background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  height: 3.125rem;
-  width: 13.625rem;
-}
-.presentation button:hover {
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
-}
-.presentation button span {
-  text-decoration: none;
-  color: var(--White, #FFF);
-  height: 1.5rem;
-  font-size: 1rem;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-}
-
-/*Bouton Restaurants*/
-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 25px;
-  border: 0px solid #9356DC;
-  background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  height: 3.125rem;
-  width: 11.625rem;
-}
-button:hover {
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
-}
-button p {
-  text-decoration: none;
-  color: var(--White, #FFF);
-  height: 1.5rem;
-  font-weight: 400;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-button a {
-  text-decoration: none;
-}
-
-header {
-  display: flex;
-  height: 3.93rem;
-  padding: 1.5rem 5.56rem 1.5rem 5.56rem;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  position: relative;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-}
-header a {
-  position: absolute;
-  left: 1rem;
-}
-header img {
-  margin-left: auto;
-  margin-right: auto;
-}
-header a i {
-  color: black;
-}
-
-footer {
-  display: flex;
-  padding: 1.375rem 1.56rem;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 2rem;
-  background-color: #353535;
-}
-footer img {
-  filter: invert(100%);
-  height: 1.3rem;
-}
-footer li {
-  display: flex;
-  align-items: center;
-  gap: 0.438rem;
-  line-height: 1.5;
-}
-footer i, footer p, footer a {
-  color: #F6F6F6;
-}
-footer a {
-  text-decoration: none;
-}
-
-@media (min-width: 992px) {
-  footer {
-    display: flex;
-    flex-direction: row-reverse;
-    column-gap: 5rem;
-    padding: 0 7rem 0 0;
-    height: 7.125rem;
-  }
-  footer ul {
-    display: flex;
-    transform: translateY(3.5rem);
-    margin-left: 10rem;
-  }
-  footer li {
-    row-gap: 1rem;
-    margin-right: 1rem;
-  }
-  footer img {
-    transform: translateY(3.5rem);
-    margin-right: -4rem;
-  }
-  footer span {
-    padding: 2rem;
-  }
-}
-/*Localisation*/
-.localisation {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.25rem;
-  background-color: #EAEAEA;
-  height: 3.125rem;
-  padding-right: 1rem;
-}
-.localisation p {
-  font-weight: 500;
-  color: #353535;
-}
-
-/*Presentation*/
-.presentation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  row-gap: 1.5rem;
-  padding: 2.5rem 1.5rem 3.5rem 2rem;
-  background-color: #F6F6F6;
-}
-.presentation h1 {
-  height: 4.25rem;
-  margin-bottom: -1.5rem;
-}
-
-/*Fonctionnement*/
-.fonctionnement {
-  display: flex;
-  flex-direction: column;
-  row-gap: 1.5rem;
-  padding: 3rem 1.25rem 4.25rem 2rem;
-}
-.fonctionnement h2 {
-  margin-right: 2rem;
-}
-.fonctionnement ol {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  list-style-type: none;
-  width: 100%;
-  padding: 0;
-}
-.fonctionnement ol li {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1.56rem;
-  width: 95%;
-  height: 4.52rem;
-  background: var(--Background, #F6F6F6);
-  border-radius: 20px;
-  overflow: hidden;
-  border: 1px solid #F6F6F6;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-}
-.fonctionnement ol li::before {
-  content: "";
-  position: absolute;
-  width: 1.4rem;
-  height: 1.4rem;
-  border-radius: 50%;
-  background-color: #9356DC;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #F6F6F6;
-  font-weight: 500;
-  font-size: 0.875rem;
-  margin-left: -0.75rem;
-}
-.fonctionnement ol li:nth-child(1)::before {
-  content: "1";
-}
-.fonctionnement ol li:nth-child(2)::before {
-  content: "2";
-}
-.fonctionnement ol li:nth-child(3)::before {
-  content: "3";
-}
-.fonctionnement ol li i {
-  margin: 0 1.56rem 0 1.56rem;
-}
-.fonctionnement ol li p {
-  margin: 0.93rem 0;
-}
-.fonctionnement ol li:nth-child(1) i, .fonctionnement ol li:nth-child(2) i {
-  color: #7E7E7E;
-}
-.fonctionnement ol li:nth-child(3) i {
-  color: #9356DC;
-}
-.fonctionnement p {
-  font-weight: 500;
-}
-
-.fonctionnement span {
-  padding-left: 0.4rem;
-}
-
-/*Restaurants*/
-.restaurants {
-  display: flex;
-  flex-direction: column;
-  row-gap: 1.5rem;
-  padding: 3.5rem 1.25rem 4rem 1.25rem;
-  background-color: #F6F6F6;
-}
-
-.liste_cartes {
-  display: flex;
-  flex-direction: column;
-  row-gap: 1.25rem;
-}
-
-.carte_restaurant {
-  position: relative;
-  border-radius: 1rem;
-  background: #FFF;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
-}
-.carte_restaurant img {
-  height: 10rem;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 1rem 1rem 0 0;
-}
-.carte_restaurant a {
-  text-decoration: none;
-  color: inherit;
-  display: flex;
-  flex-direction: column;
-}
-
-.description_carte {
-  display: flex;
-  flex-direction: column;
-}
-.description_carte h3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.4rem;
-  padding-left: 0.75rem;
-}
-.description_carte p {
-  padding-left: 0.75rem;
-  padding-bottom: 1rem;
-}
-
-.restaurants .liste_cartes .carte_restaurant.nouveau::after {
-  content: "Nouveau";
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-  background-color: #99E2D0;
-  color: #008766;
-  padding: 0.25rem 0.5rem;
-  font-family: "Roboto";
-}
-
-/*Coeur*/
-.conteneur_coeur {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 21.3125rem;
-  position: absolute;
-  bottom: 14%;
-  left: 90%;
-}
-.conteneur_coeur input[type=checkbox] {
-  display: none;
-}
-.conteneur_coeur input[type=checkbox]:not(:checked) + .i-coeur i {
-  animation: none;
-}
-
-.i-coeur i {
-  font-size: 1.375rem;
-  -webkit-background-clip: text;
-  position: relative;
-  display: inline-block;
-  overflow: hidden;
-  transition: color 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
-  padding-right: 1.25rem;
-}
-
-input[type=checkbox]:checked ~ i {
-  background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
-  -webkit-background-clip: text;
-  color: transparent;
-  font-weight: 900;
-  font-size: 1.375rem;
-  border: 1px solid transparent;
-  animation: remplissage 300ms forwards;
-  transform-origin: bottom;
-}
-
-/*Media query*/
-@media (min-width: 992px) {
-  .presentation h1 {
-    font-size: 2.5rem;
-  }
-  .fonctionnement {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-  .fonctionnement ol {
-    flex-direction: row;
-    gap: 2rem;
-  }
-  .fonctionnement ol li {
-    width: 80%;
-  }
-  .restaurants {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-  .liste_cartes {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 6.25rem;
-    grid-row-gap: 3.12rem;
-  }
-}
-/*Animation menu*/
-.section_menu {
-  opacity: 0;
-  transform: translateX(-100%);
-  animation: slideIn 1.5s forwards;
-}
-.section_menu[data-order="1"] {
-  animation-delay: 0.5s;
-}
-.section_menu[data-order="2"] {
-  animation-delay: 1.5s;
-}
-.section_menu[data-order="3"] {
-  animation-delay: 2s;
-}
-
-/*RESTAURANTS*/
-main img {
-  height: 17.18rem;
-  width: 100%;
-  object-fit: cover;
-}
-
-.menu {
-  position: relative;
-  margin-top: -3.5rem;
-  border-radius: 2.5rem 2.5rem 0 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 2.5rem;
-  padding: 2rem 1rem 2rem 1rem;
-  background-color: #F6F6F6;
-}
-.menu h1 {
-  font-size: 1.75rem;
-  white-space: nowrap;
-  margin: 0;
-}
-
-.titre-coeur {
-  width: 100%;
-}
-
-.conteneur_coeur_restaurant {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-
-input[type=checkbox] {
-  display: none;
-}
-input[type=checkbox]:not(:checked) + .i-coeur i {
-  animation: none;
-}
-
-.section_menu {
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.75rem;
-  width: 100%;
-}
-.section_menu h2::after {
-  content: "";
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  width: 2.5rem;
-  height: 0.188rem;
-  background: #99E2D0;
-  margin-top: 0.5rem;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "}".\a     \2577 \a 178 \2502  }\a     \2502   ^\a     \2575 \a   scss\\pages\\restaurant.scss 178:2  @import\a   scss\\styles.scss 8:9              root stylesheet';
 }
-
-.intitule_plat {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 4.5rem;
-  border-radius: 20px;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  white-space: nowrap;
-  align-self: center;
-  overflow: hidden;
-  background-color: white;
-}
-.intitule_plat .description_carte {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.intitule_plat span {
-  margin-left: auto;
-  margin-right: 1rem;
-  margin-top: 1.4rem;
-  font-weight: 700;
-  transition: transform 0.6s ease-in-out;
-}
-.intitule_plat h3 {
-  margin-top: 0.5rem;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.intitule_plat p {
-  margin-bottom: 0.5rem;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.check {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #99E2D0;
-  border-radius: 0 1rem 1rem 0;
-  width: 3.66rem;
-  height: 4.5rem;
-  margin-right: -3.66rem;
-  transition: all 0.6s ease-in-out;
-  opacity: 0;
-  text-overflow: ellipsis;
-}
-.check i {
-  color: #99E2D0;
-  background-color: white;
-  border-radius: 50%;
-  font-size: 0.75rem;
-  padding: 0.2rem;
-}
-.intitule_plat:hover .check {
-  margin-right: 0;
-  opacity: 1;
-}
-
-/*Media query*/
-@media (min-width: 992px) {
-  .menu {
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 2.5rem;
-    width: 70%;
-    margin-left: 15%;
-  }
-  .conteneur_coeur_restaurant {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    gap: 30px;
-  }
-  .section_menu {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-}
-/*Loader*/
-@keyframes fade-out {
-  from {
-    opacity: 0.8;
-  }
-  to {
-    opacity: 0;
-    pointer-events: none;
-  }
-}
-@keyframes bounce {
-  to {
-    transform: translateY(-10px);
-  }
-}
-@keyframes blur-animation {
-  to {
-    filter: blur(0);
-  }
-}
-/*Animation restaurants*/
-@keyframes slideIn {
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-/*Animation coeur*/
-@keyframes remplissage {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-  20% {
-    opacity: 0.2;
-    transform: scale(0.2);
-  }
-  40% {
-    opacity: 0.4;
-    transform: scale(0.4);
-  }
-  60% {
-    opacity: 0.6;
-    transform: scale(0.6);
-  }
-  80% {
-    opacity: 0.8;
-    transform: scale(0.8);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-.loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgb(255, 255, 255);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 1;
-  animation: fade-out 5s forwards, bounce 5s infinite alternate;
-  z-index: 1;
-}
-
-.c1,
-.c2,
-.c3 {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 4px;
-  margin: 0 2rem;
-}
-
-.c1 {
-  background-color: #9356DC;
-}
-
-.c2 {
-  background-color: #FF79DA;
-}
-
-.c3 {
-  background-color: #99E2D0;
-}
-
-.loader:only-child {
-  filter: blur(5px);
-  animation: blur-animation 6s forwards;
-}
-
-.c1 {
-  animation: bounce 0.5s infinite alternate;
-}
-
-.c2 {
-  animation: bounce 0.5s 0.1s infinite alternate;
-}
-
-.c3 {
-  animation: bounce 0.5s 0.2s infinite alternate;
-}
-
-/*# sourceMappingURL=styles.css.map */
