--- a/scss/pages/restaurant.scss
+++ b/scss/pages/restaurant.scss
@@ -44,6 +44,7 @@ main img {
   }
 }
 
+/*Coeur restaurants*/
 .titre-coeur {
   width: 100%;
 }
@@ -62,6 +63,8 @@ input[type="checkbox"] {
     animation: none;
   }
 }
+
+/*Section Menu*/
 
 .section_menu {
   display: flex;
@@ -89,13 +92,12 @@ input[type="checkbox"] {
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   white-space: nowrap;
   align-self: center;
-  overflow: hidden;
+  overflow: hidden; 
   background-color: white;
 
   .description_carte {
     overflow: hidden;
-    text-overflow: ellipsis;
-  }
+    text-overflow: ellipsis; 
 
   span {
     margin-left: auto;
