--- a/scss/components/button.scss
+++ b/scss/components/button.scss
@@ -13,7 +13,7 @@
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
     }
 
-    span {
+    #spanA {
         text-decoration: none;
         color: var(--White, #FFF);
         height: 1.5rem;
