--- a/scss/utils/keyframes.scss
+++ b/scss/utils/keyframes.scss
@@ -7,7 +7,7 @@
 
   to {
     opacity: 0;
-    pointer-events: none;
+    pointer-events: none; /*Ne réagit pas aux événements de pointage*/
   }
 }
 
